test/types/type_variables/deitz/test_clone_class1a.good
error: 'a' has mixed basic types:( int64 float64 ) 
error: 'a' has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
fail: program does not type
prelude.chpl:293: '_ret_=' has mixed basic types:( int64 float64 ) 
prelude.chpl:293: '_ret_=' has mixed basic types:( int64 float64 ) 
prelude.chpl:294: '_tmp' has mixed basic types:( int64 float64 ) 
prelude.chpl:294: '_tmp' has mixed basic types:( int64 float64 ) 
prelude.chpl:294: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:294: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:295: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:295: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:1: class foo:: 'x' has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:6: '_ret_x' has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:6: '_tmp' has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:6: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:6: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:6: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:6: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1a.chpl:6: expression has mixed basic types:( null int64 float64 ) 
